Fix overflowing image

--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -178,3 +178,7 @@ dialog button {
 dialog::backdrop {
 	backdrop-filter: blur(1px) brightness(0.75);
 }
+
+img {
+	max-width: 100%;
+}
